changed paragraph text length

--- a/Media-query/media.html
+++ b/Media-query/media.html
@@ -13,73 +13,73 @@
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 1</h3>
             <p>Price - $100</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugit vero ipsam eaque nostrum voluptates dolores sint nemo itaque, doloribus voluptate quidem accusantium et cum voluptas quae alias autem? Assumenda.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, laboriosam.</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 2</h3>
             <p>Price - $200</p>
-            <p>Optio, error provident ab maiores eaque a nam, fugit, ipsa officiis animi illum quibusdam magni dolorem quisquam adipisci molestiae consequuntur porro? Itaque quidem sed vitae facere fuga beatae ratione nesciunt?</p>
+            <p>Praesentium aperiam molestias adipisci, laborum velit excepturi tempore eius ipsam.</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 3</h3>
             <p>Price - $300</p>
-            <p>Reiciendis doloremque a ipsum obcaecati iusto incidunt deleniti. Necessitatibus, placeat eum est officia, voluptatibus fugiat incidunt quaerat rerum ab labore asperiores, iure quam minima in deserunt sequi culpa reiciendis? Ea.</p>
+            <p>Odit accusantium provident necessitatibus vel obcaecati cum recusandae tenetur quibusdam!</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 4</h3>
             <p>Price - $400</p>
-            <p>Eaque blanditiis quo fugit consequatur doloribus, quos aspernatur itaque minima maxime et aliquam sequi, repellat eius cumque incidunt ullam necessitatibus perferendis sint nesciunt sit libero, ab rem natus. Mollitia, totam.</p>
+            <p>Officia ut eum quaerat, soluta vel odio qui libero. Earum?</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 5</h3>
             <p>Price - $500</p>
-            <p>Quod enim, vero in explicabo culpa odit animi tempora ducimus commodi eveniet amet dignissimos iusto accusantium nostrum aliquid dolores magni exercitationem quae architecto obcaecati et inventore ratione repellat qui. Accusamus.</p>
+            <p>Nesciunt temporibus voluptatibus possimus explicabo minima facilis, totam cum exercitationem!</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 6</h3>
             <p>Price - $600</p>
-            <p>Laborum cupiditate dolore cum saepe temporibus sed voluptatibus obcaecati ratione animi maxime quasi itaque assumenda, excepturi inventore aliquid doloremque voluptates quis adipisci ducimus unde repudiandae in. Illo cum sint assumenda.</p>
+            <p>Impedit possimus veniam eligendi dolorem repudiandae, esse quos consectetur distinctio?</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 7</h3>
             <p>Price - $700</p>
-            <p>Aliquid nihil ad asperiores inventore enim error architecto minima libero cupiditate reprehenderit quos illo assumenda quo in amet consequatur, harum ea suscipit voluptates nobis! Ullam dolore ad eos ratione sed!</p>
+            <p>Eum ab accusantium maxime consequatur magni, sint odit architecto aliquid!</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 8</h3>
             <p>Price - $800</p>
-            <p>Eius modi ab veniam asperiores non provident sit vero ratione. Amet voluptas odit laboriosam dignissimos vero veniam dolore quisquam, molestias assumenda, minima nesciunt aliquid distinctio architecto debitis quae saepe. Nam!</p>
+            <p>Commodi obcaecati in sint accusamus molestiae, harum laborum eum. Incidunt!</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 9</h3>
             <p>Price - $900</p>
-            <p>Hic, voluptatem, eum adipisci suscipit amet officia, recusandae iure temporibus facilis at nesciunt similique praesentium est error. Minima atque quos voluptatibus quae. Itaque omnis ex ad nobis cupiditate commodi magnam.</p>
+            <p>Ipsam necessitatibus debitis magni quam harum aspernatur, dignissimos dolore assumenda!</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 10</h3>
             <p>Price - $1000</p>
-            <p>Iusto optio corrupti reprehenderit, earum ab ullam cupiditate perferendis neque atque consectetur facere nemo quis cumque accusamus sint cum officiis recusandae, rem tenetur dignissimos. Qui soluta fugiat adipisci dignissimos voluptatum?</p>
+            <p>Adipisci, accusamus voluptatem et eos repudiandae nostrum voluptas repellat alias.</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 11</h3>
             <p>Price - $1100</p>
-            <p>Repudiandae cum ipsum facere sunt, delectus sequi doloremque a voluptatem libero veniam nesciunt esse exercitationem, distinctio ullam accusamus quibusdam! Placeat laborum velit explicabo tenetur corrupti enim eligendi corporis doloremque dicta.</p>
+            <p>Saepe, alias magnam consequatur beatae voluptas dolore amet illum doloribus!</p>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 12</h3>
             <p>Price - $1200</p>
-            <p>Debitis ut aut iusto sit labore, quisquam suscipit porro qui! Numquam quod velit necessitatibus earum ex placeat doloremque nihil, rerum soluta reprehenderit voluptatibus corporis aut iure expedita eligendi! Ipsum, ullam!</p>
+            <p>Quaerat obcaecati odit tempora facere voluptates? Consequatur asperiores laudantium nobis.</p>
         </div>
     </div>
 </body>
