--- a/Media-query/media.html
+++ b/Media-query/media.html
@@ -8,78 +8,91 @@
 </head>
 <body>
     <!-- .container>.food*12>img[src="../Assets/images/ham-burger.png" alt="image of a ham burger"]+h3{Ham Burger $}+p{Price - \$$00}+p>lorem -->
+    <!-- .container>.food*12>img[src="../Assets/images/ham-burger.png" alt="image of a ham burger"]+h3{Ham Burger $}+p{Price - \$$00}+p>lorem10^btn{Buy Now} -->
     <div class="container">
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 1</h3>
             <p>Price - $100</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, laboriosam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, quam.</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 2</h3>
             <p>Price - $200</p>
-            <p>Praesentium aperiam molestias adipisci, laborum velit excepturi tempore eius ipsam.</p>
+            <p>Obcaecati officia suscipit est amet molestiae magnam illo nostrum corrupti?</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 3</h3>
             <p>Price - $300</p>
-            <p>Odit accusantium provident necessitatibus vel obcaecati cum recusandae tenetur quibusdam!</p>
+            <p>Molestias, ex dicta. Tempore nam dignissimos unde nostrum repellendus tenetur?</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 4</h3>
             <p>Price - $400</p>
-            <p>Officia ut eum quaerat, soluta vel odio qui libero. Earum?</p>
+            <p>Tenetur deserunt ad laudantium voluptate cupiditate quae itaque provident architecto.</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 5</h3>
             <p>Price - $500</p>
-            <p>Nesciunt temporibus voluptatibus possimus explicabo minima facilis, totam cum exercitationem!</p>
+            <p>Nostrum id fugit, quos modi non dolore tenetur perferendis? Dolores.</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 6</h3>
             <p>Price - $600</p>
-            <p>Impedit possimus veniam eligendi dolorem repudiandae, esse quos consectetur distinctio?</p>
+            <p>Quae impedit est a harum illum quaerat iste velit sunt!</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 7</h3>
             <p>Price - $700</p>
-            <p>Eum ab accusantium maxime consequatur magni, sint odit architecto aliquid!</p>
+            <p>Autem quos numquam harum nihil sequi, doloribus suscipit beatae obcaecati!</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 8</h3>
             <p>Price - $800</p>
-            <p>Commodi obcaecati in sint accusamus molestiae, harum laborum eum. Incidunt!</p>
+            <p>Mollitia natus praesentium dolor cupiditate itaque nulla magni optio maiores?</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 9</h3>
             <p>Price - $900</p>
-            <p>Ipsam necessitatibus debitis magni quam harum aspernatur, dignissimos dolore assumenda!</p>
+            <p>Itaque libero provident neque iste voluptates. Illum earum at ab?</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 10</h3>
             <p>Price - $1000</p>
-            <p>Adipisci, accusamus voluptatem et eos repudiandae nostrum voluptas repellat alias.</p>
+            <p>Odit optio aliquid corrupti dolorem, accusamus incidunt officiis ullam est.</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 11</h3>
             <p>Price - $1100</p>
-            <p>Saepe, alias magnam consequatur beatae voluptas dolore amet illum doloribus!</p>
+            <p>Tempore architecto, dicta corrupti voluptatum animi nesciunt sunt ea hic.</p>
+            <button>Buy Now</button>
         </div>
         <div class="food">
             <img src="../Assets/images/ham-burger.png" alt="image of a ham burger">
             <h3>Ham Burger 12</h3>
             <p>Price - $1200</p>
-            <p>Quaerat obcaecati odit tempora facere voluptates? Consequatur asperiores laudantium nobis.</p>
+            <p>Incidunt, ut tempora voluptas repellat nisi voluptatum alias ducimus consectetur!</p>
+            <button>Buy Now</button>
         </div>
     </div>
 </body>
