made image collage using flexbox and grid

--- a/Responsive-layout/collage.html
+++ b/Responsive-layout/collage.html
@@ -26,6 +26,23 @@
                         <img src="../images/E.jpg" alt="">
                     </div>
                 </div>
+                <div class="row">
+                    <div>
+                        <img src="../Images/F.jpg" alt="">
+                    </div>
+                    <div class="grid-image">
+                        <img src="../images/G.jpg" alt="">
+                        <img src="../images/G.jpg" alt="">
+                        <img src="../images/G.jpg" alt="">
+                        <img src="../images/G.jpg" alt="">
+                    </div>
+                    <div>
+                        <img src="../Images/H.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <img src="../images/A.jpg" alt="">
+                </div>
             </section>
         </main>
     </header>
